--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "package": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=src/images/large-round.icns --prune=false --out=builds"
   },
   "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "electron": "^1.6.11",
-    "electron-packager": "^8.7.2"
+    "electron-packager": "^8.7.2",
+    "mobx": "^3.2.2",
+    "mobx-react": "^4.2.2"
   }
 }
